# Note-Management-App-Backend

./: .env.example  .gitignore  README.md  docker-compose.yml
src/: manage.py  pyproject.toml  pytest.ini
src/api/: constants.py  openapi.py  urls.py  utils.py
src/api/serializers/: auth.py  note.py  user.py
src/api/views/: auth.py  note.py
src/core/: admin.py
src/core/migrations/: 0001_initial.py
src/core/models/: __init__.py  mixins.py  note.py  user.py
src/note_management_app/: asgi.py  settings.py  wsgi.py
src/tests/: utils.py
src/tests/auth/test_integration/: test_sign_in.py  test_sign_out.py  test_sign_up.py
src/tests/factories/: note.py  user.py
src/tests/note/test_integration/: test_create_note.py  test_delete_note.py  test_get_note.py  test_get_note_list.py  test_update_note.py
